--- a/.github/workflows/push-on-merge.yaml
+++ b/.github/workflows/push-on-merge.yaml
@@ -13,7 +13,7 @@ env:
 
 jobs:
   sync:
-    environment: windmill
+    environment: windmill-cloud
     runs-on: "ubuntu-latest"
     steps:
       - name: Checkout
@@ -27,7 +27,7 @@ jobs:
       # (push will pull first to detect conflicts and only push actual changes)
       - name: Push changes
         run: |
-          deno run --unstable -A  https://deno.land/x/wmill@v1.104.0/main.ts workspace add __automation ${{ env.WMILL_WORKSPACE }} ${{ env.WMILL_URL }} --token ${{ secrets.WMILL_TOKEN }}
+          deno run --unstable -A  https://deno.land/x/wmill@v1.104.0/main.ts workspace add __automation ${{ env.WMILL_WORKSPACE }} ${{ env.WMILL_URL }} --token ${{ secrets.WMILL_TOKEN_CLOUD }}
           deno run --unstable -A  https://deno.land/x/wmill@v1.104.0/main.ts sync push --yes --fail-conflicts
 
       # autocommit the new .wmill state after the push                                                             
